catkin_ws/logs/iq_gnc/build.make.578.log.stderr
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp: In function ‘geometry_msgs::TwistStamped vel_control_input(geometry_msgs::Vector3Stamped*, float)’:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:719:1: warning: no return statement in function returning non-void [-Wreturn-type]
  719 | }
      | ^
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsVelSub_cb(const ConstPtr&)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:326:12: error: could not convert ‘current_global_position_2’ from ‘geometry_msgs::PoseStamped’ {aka ‘geometry_msgs::PoseStamped_<std::allocator<void> >’} to ‘geographic_msgs::GeoPoseStamped’ {aka ‘geographic_msgs::GeoPoseStamped_<std::allocator<void> >’}
  326 |     fixyaw(current_global_position_2);
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
      |            |
      |            geometry_msgs::PoseStamped {aka geometry_msgs::PoseStamped_<std::allocator<void> >}
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
